add ranges
